
* Names that resemble FTP servers (i.e., start with "ftp.") are opened 
  with the ftp: protocol.  (Feature request #598368)
* Brent Beardsley modified the add-on support to load all xml files
  for an add-on, not just one.
* Incorporated Thad Kerosky's changes to googlespell add-on to display
  results in a popup window.  Added a common method, displayPopupMessage,
  to defer_tools.js.

Bug Fixes

* Made googlespell add-on function names unique so there would not be
  any collisions with other methods.


-- What's new for 3.0.0.24 (beta)

New Searches

* rfc - search the Internet RFC/STD/FYI/BCP Archives (from Joey Lesh)
* cp - search for CodeProject, a code sharing site (from Andreas Saurwein)
* vir - search http://www.virusbtn.com/ for virus information (from John Bairen)
* infosec - search http://www.infosecuritymag.com/ for security information (from John Bairen)
* pg - Project Gutenberg/Public Domain book (pg) search (from Thad Kerosky)
* slash - Search Slashdot (from Paul Bowers)
* short - Abbreviate long and convoluted URLs (from Reginald Braithwaite-Lee)
* palm - PalmGear.com search (from Herman Fuchs)
* fv - FlightView search (from Allen B. MacKenzie)

Modified Searches

* yp - Tim Dierks added support for addresses
* temp - Steven Ehrbar added Kelvin and Rankine conversions, /centigrade switch

Enhancements

* install now bundled with xplocalsearch.css, to be used as localsearch.css to make
  things match with XP default theme.
* changed default length of retained search history from 50 to 1000.
* Added Finnish translation (from Toni Viemero)

Bug Fixes

* changed progid for MSXML component from MSXML.DOMDocument to MSXML2.DOMDocument


-- What's new for 3.0.0.23 (beta)

New Searches

* que - Interface with Queue (http://www.irondust.com/queue) from Nick Tornow
* wotsit - Programmers File Format Reference

Modified Searches

* gg - /fresh switch disappeared (/since is enough) - /since now allows a 