@@ -30,6 +30,7 @@ Enhancements
 * Incorporated Thad Kerosky's changes to googlespell add-on to display
   results in a popup window.  Added a common method, displayPopupMessage,
   to defer_tools.js.
+* dictionarypop add-on is now available (from Thad Kerosky)
 
 Bug Fixes
 
